--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.7.18",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
@@ -19,6 +21,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
